# MSV

./: .gitignore  .gitmodules  Dockerfile  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  build.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure~  default.nix  error.txt  libtool  llvm-cl-opt.patch  msv-runner.py  pyrightconfig.json  q  requirements.txt
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1
benchmarks/: .gitignore  Makefile  Makefile.am  Makefile.in  lighttpd-repair-temp.conf  php-genprog-f455f8.conf  php-repair-1e91069.conf  php-repair-2adf58.conf  php-repair-2e25ec9.conf  php-repair-3acdca.conf  php-repair-453c954.conf  php-repair-5a8c917.conf  php-repair-8ba00176.conf  php-repair-b84967d.conf  (+1 more)
benchmarks/libtiff-deps/: .gitignore  Makefile  Makefile.am  Makefile.in
benchmarks/libtiff-deps/jpeg-9a/: Makefile  cjpeg  config.status  djpeg  jpegtran  libjpeg.la  libtool  rdjpgcom  wrjpgcom
benchmarks/libtiff-deps/jpeg-9a-build/lib/: libjpeg.la  libjpeg.so.9.1.0
benchmarks/libtiff-deps/jpeg-9a/.deps/: cdjpeg.Po  cjpeg.Po  djpeg.Po  jaricom.Plo  jcapimin.Plo  jcapistd.Plo  jcarith.Plo  jccoefct.Plo  jccolor.Plo  jcdctmgr.Plo  jchuff.Plo  jcinit.Plo  jcmainct.Plo  jcmarker.Plo  jcmaster.Plo  jcomapi.Plo  jcparam.Plo  jcprepct.Plo  jcsample.Plo  jctrans.Plo  jdapimin.Plo  jdapistd.Plo  jdarith.Plo  jdatadst.Plo  jdatasrc.Plo  jdcoefct.Plo  jdcolor.Plo  jddctmgr.Plo  jdhuff.Plo  jdinput.Plo  jdmainct.Plo  jdmarker.Plo  jdmaster.Plo  jdmerge.Plo  jdpostct.Plo  jdsample.Plo  jdtrans.Plo  jerror.Plo  jfdctflt.Plo  jfdctfst.Plo  (+25 more)
benchmarks/libtiff-deps/jpeg-9a/.libs/: cjpeg  djpeg  jpegtran  libjpeg.lai  libjpeg.so.9.1.0
src/: ASTUtils.cpp  BenchProgram.cpp  BenchProgram.h  CodeRewrite.cpp  CodeRewrite.h  CollectCondition.cpp  CollectCondition.h  ConditionRewriter.cpp  ConditionRewriter.h  DGController.cpp  DGController.h  DeltaDebuggingTest.cpp  DeltaDebuggingTest.h  ErrorLocalizer.h  ExprSynthesizer.cpp  ExprSynthesizer.h  FeatureExtract.cpp  GPATH  GRTAGS  GTAGS  GlobalAnalyzer.cpp  GlobalAnalyzer.h  LocalAnalyzer.cpp  LocalAnalyzer.h  Main.cpp  Makefile  Makefile.am  Makefile.in  ProfileErrorLocalizer.cpp  ProfileErrorLocalizer.h  ProfileWriter.cpp  ProfileWriter.h  ProfilerAction.cpp  ProfilerAction.lo  RepairCandidateGenerator.cpp  RepairCandidateGenerator.h  RepairSearchEngine.cpp  RepairSearchEngine.h  SBFLLocalizer.cpp  SBFLLocalizer.h  (+13 more)
src/.deps/: ASTDiffer.Po  ASTUtils.Po  BenchProgram.Po  CodeRewrite.Po  DeltaDebuggingTest.Po  DuplicateDetector.Po  ErrorLocalizer.Po  ExprSynthesizer.Po  FeatureExtract.Po  GlobalAnalyzer.Po  LocalAnalyzer.Po  Main.Po  PlayGround.Po  ProfileErrorLocalizer.Po  ProfilerAction.Plo  RepairCandidateGenerator.Po  RepairSearchEngine.Po  SourceContextManager.Po  Utils.Po  _prophet_profile.Plo  _test_runtime.Plo  learner.Po  pdiffer.Po
src/.libs/: libprofile_runtime.la  libprofile_runtime.lai  libprofile_runtime.so.0  libprofile_runtime.so.0.0.0  libprofiler.lai  libtest_runtime.la  libtest_runtime.lai  libtest_runtime.so.0  libtest_runtime.so.0.0.0  libtest_runtime_bak.so.0.0.0
src/dg/: Makefile
src/dg/.deps/: BBlockBase.Po  Debug.Po  Offset.Po
src/dg/ControlDependence/.deps/: NTSCD.Po
src/dg/MemorySSA/.deps/: Definitions.Po  MemorySSA.Po  ModRef.Po
src/dg/PointerAnalysis/.deps/: Pointer.Po  PointerAnalysis.Po  PointerGraph.Po  PointerGraphOptimizations.Po  PointerGraphValidator.Po  PointsToSet.Po
src/dg/ReadWriteGraph/.deps/: ReadWriteGraph.Po
src/dg/SystemDependenceGraph/.deps/: DependenceGraph.Po
src/dg/llvm/: LLVMDGVerifier.cpp  LLVMDependenceGraph.cpp  LLVMNode.cpp  LLVMSlicerCriteria.cpp
src/dg/llvm/.deps/: LLVMDGVerifier.Po  LLVMDependenceGraph.Po  LLVMNode.Po
src/dg/llvm/ControlDependence/: ControlDependence.cpp  InterproceduralCD.cpp  SCD.cpp
src/dg/llvm/ControlDependence/.deps/: ControlDependence.Po  InterproceduralCD.Po  SCD.Po
src/dg/llvm/ControlDependence/legacy/: Block.cpp  Function.cpp  GraphBuilder.cpp  NTSCD.cpp
src/dg/llvm/ControlDependence/legacy/.deps/: Block.Po  Function.Po  GraphBuilder.Po  NTSCD.Po
src/dg/llvm/DataDependenceAnalysis/: LLVMDataDependenceAnalysis.cpp
src/dg/llvm/DataDependenceAnalysis/.deps/: LLVMDataDependenceAnalysis.Po
src/dg/llvm/DefUse/: DefUse.cpp
src/dg/llvm/DefUse/.deps/: DefUse.Po
src/dg/llvm/Dominators/.deps/: PostDominators.Po
src/dg/llvm/ForkJoin/: ForkJoin.cpp
src/dg/llvm/ForkJoin/.deps/: ForkJoin.Po
src/dg/llvm/PointerAnalysis/: Calls.cpp  Constants.cpp  Instructions.cpp  PointerAnalysis.cpp  PointerGraph.cpp  PointerGraphValidator.cpp  Threads.cpp
src/dg/llvm/PointerAnalysis/.deps/: Block.Po  Calls.Po  Constants.Po  Globals.Po  Instructions.Po  Interprocedural.Po  PointerAnalysis.Po  PointerGraph.Po  PointerGraphValidator.Po  Structure.Po  Threads.Po
src/dg/llvm/ReadWriteGraph/: Calls.cpp  Instructions.cpp  LLVMReadWriteGraphBuilder.cpp
src/dg/llvm/ReadWriteGraph/.deps/: Calls.Po  Instructions.Po  LLVMReadWriteGraphBuilder.Po
src/dg/llvm/SystemDependenceGraph/.deps/: Dependencies.Po  SDG2Dot.Po  SystemDependenceGraph.Po
src/dg/llvm/ThreadRegions/: MayHappenInParallel.cpp  ThreadRegion.cpp
src/dg/llvm/ThreadRegions/.deps/: MayHappenInParallel.Po  ThreadRegion.Po
src/dg/llvm/ThreadRegions/Graphs/: BlockGraph.cpp  ControlFlowGraph.cpp  CriticalSectionsBuilder.cpp  FunctionGraph.cpp  GraphBuilder.cpp  ThreadRegionsBuilder.cpp
src/dg/llvm/ThreadRegions/Graphs/.deps/: BlockGraph.Po  ControlFlowGraph.Po  CriticalSectionsBuilder.Po  FunctionGraph.Po  GraphBuilder.Po  ThreadRegionsBuilder.Po
src/dg/llvm/ThreadRegions/Nodes/: CallFuncPtrNode.cpp  CallNode.cpp  CallReturnNode.cpp  EntryNode.cpp  ExitNode.cpp  ForkNode.cpp  GeneralNode.cpp  JoinNode.cpp  LockNode.cpp  Node.cpp  NodeIterator.cpp  ReturnNode.cpp  UnlockNode.cpp
src/dg/llvm/ThreadRegions/Nodes/.deps/: CallFuncPtrNode.Po  CallNode.Po  CallReturnNode.Po  EntryNode.Po  ExitNode.Po  ForkNode.Po  GeneralNode.Po  JoinNode.Po  LockNode.Po  Node.Po  NodeIterator.Po  ReturnNode.Po  UnlockNode.Po
(+2776 files in other folders)
